<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="im.gian.tr.login.signin.SigninFragment">

    <data>
        <variable
            name="signin"
            type="im.gian.tr.login.signin.SigninFragment" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary"
            android:textSize="35sp"
            android:textFontWeight="700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/register_to_continue"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textFontWeight="500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="60dp"
            android:hint="@string/email"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxBackgroundColor="@color/secondary"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxBackgroundColor="@color/secondary"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/login"
            android:textColor="@color/secondary"
            android:textFontWeight="700"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            app:iconTint="@color/secondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.5"
                android:text="@string/forgot_password_question"
                android:textFontWeight="500"
                android:textSize="15sp"
                android:textColor="@color/primary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:text="@string/register_underline"
                android:textFontWeight="500"
                android:textSize="15sp"
                android:textColor="@color/primary"
                android:textAlignment="textEnd"/>

        </LinearLayout>

    </LinearLayout>
</layout>